<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp">
    <LinearLayout
        android:id="@+id/rvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="20"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/created_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/created_at"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/market"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/market"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/side"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/side"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/priceOrder"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/priceOrder"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/executed_volume"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/executed_volume"
            android:textAlignment="center"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/marketRV"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rvHeader"/>
</RelativeLayout>