<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/markerBackground">
    <LinearLayout
        android:id="@+id/keyinsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="30dp"
        android:background="@drawable/rounded_rect"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                style="@style/UpbitTextTheme"
                android:text="@string/keyinsert"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                style="@style/UpbitSubTextTheme"
                android:text="@string/guide"/>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/UpbitKeyTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/accesskey_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/accesskeyED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="?attr/colorAccent"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/UpbitKeyTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/secretkey_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secretkeyED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="?attr/colorAccent"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/UpbitButtonThemeCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/cancel"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                style="@style/UpbitButtonTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>