<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="coinListFragment">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_coin"
        android:layout_width="match_parent"
        android:hint="@string/search_hint"
        android:textColor="?attr/colorAccent"
        android:textColorHint="?attr/colorAccent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/zoom"
        android:singleLine="true"
        />
    <LinearLayout
        android:id="@+id/marketCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_coin"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/kwrList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/autoTradingTextViewPlusMinus"
            android:layout_marginEnd="1dp"
            android:text="KRW"/>
        <TextView
            android:id="@+id/watchList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/autoTradingTextViewPlusMinus"
            android:text="관심"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rvHeader"
        android:layout_below="@+id/marketCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="20"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/coinName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/coinName"
            style="@style/subTitle"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/trade_price"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trade_price"
            style="@style/subTitle"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/change_rate"
            android:layout_weight="3.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change_rate"
            style="@style/subTitle"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/acc_trade_price_24h"
            android:layout_weight="5.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/acc_trade_price_24h"
            style="@style/subTitle"
            android:textAlignment="center"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/marketRV"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rvHeader"/>
</RelativeLayout>