<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">
    <LinearLayout
        android:id="@+id/alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textSize="20sp"
            style="@style/UpbitTextTheme"
            android:text="@string/alarm"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/alarmSwitching"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/UpbitSwitchTheme"
            android:layout_weight="4"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/alarmInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/alarm">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textSize="17sp"
            android:textColor="@color/subTitle"
            style="@style/UpbitTextTheme"
            android:text="@string/alarmInfo"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/modechange"
        android:layout_below="@+id/alarmInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textSize="20sp"
            style="@style/UpbitTextTheme"
            android:text="@string/modechange"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/darkSwitching"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/UpbitSwitchTheme"
            android:layout_weight="4"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/modechangeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/modechange">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@color/subTitle"
        style="@style/UpbitTextTheme"
        android:text="@string/modechangeInfo"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/keychange"
        android:layout_below="@+id/modechangeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            style="@style/UpbitTextTheme"
            android:text="@string/keychange"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textSize="17sp"
            android:textColor="@color/subTitle"
            style="@style/UpbitTextTheme"
            android:text="@string/keychangeInfo"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/accessKeySave"
            style="@style/UpbitButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="15sp"
            android:text="@string/save"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/UpbitKeyTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/accesskey_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/accesskeyED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="?attr/colorAccent"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/secretKeySave"
            style="@style/UpbitButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="15sp"
            android:text="@string/save"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/UpbitKeyTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/secretkey_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secretkeyED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="?attr/colorAccent"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <!--<LinearLayout
        android:id="@+id/secretkey"
        android:layout_below="@+id/accesskey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/UpbitKeyTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/accesskey_hint"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secretkeyED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>-->
</RelativeLayout>