<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/autoTradingEditTextRight"
                android:text="@string/rsi"/>
            <EditText
                android:id="@+id/rsiLess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textCursorDrawable="?attr/colorAccent"
                android:layout_weight="3"
                android:hint="@string/less"
                android:textAlignment="textEnd"
                android:inputType="numberDecimal"
                style="@style/autoTradingEditTextLeft"
                android:maxLines="1" />
            <TextView
                android:id="@+id/rsiLessPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                style="@style/autoTradingTextViewPlusMinus"
                android:text="@string/plus"/>
            <TextView
                android:id="@+id/rsiLessMinus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                style="@style/autoTradingTextViewPlusMinus"
                android:text="@string/minus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/autoTradingEditTextRight"
                android:text="@string/stochasticSlowKShortName"/>
            <EditText
                android:id="@+id/stochasticSlowKLess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/autoTradingEditTextLeft"
                android:layout_weight="3"
                android:hint="@string/less"
                android:textAlignment="textEnd"
                android:inputType="numberDecimal"
                android:maxLines="1" />
            <TextView
                android:id="@+id/stochasticSlowKLessPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                style="@style/autoTradingTextViewPlusMinus"
                android:text="@string/plus"/>
            <TextView
                android:id="@+id/stochasticSlowKLessMinus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                style="@style/autoTradingTextViewPlusMinus"
                android:text="@string/minus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/autoTradingEditTextRight"
                android:layout_weight="3"
                android:text="@string/stochasticSlowDShortName"/>
            <EditText
                android:id="@+id/stochasticSlowDLess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/autoTradingEditTextLeft"
                android:layout_weight="3"
                android:hint="@string/less"
                android:textAlignment="textEnd"
                android:inputType="numberDecimal"
                android:maxLines="1" />
            <TextView
                android:id="@+id/stochasticSlowDLessPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                style="@style/autoTradingTextViewPlusMinus"
                android:text="@string/plus"/>
            <TextView
                android:id="@+id/stochasticSlowDLessMinus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                style="@style/autoTradingTextViewPlusMinus"
                android:text="@string/minus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                style="@style/autoTradingEditTextRight"
                android:text="@string/price"/>
            <EditText
                android:id="@+id/priceLess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="@string/less"
                android:textAlignment="textEnd"
                android:maxLength="10"
                android:inputType="numberDecimal"
                style="@style/autoTradingEditTextLeft"
                android:maxLines="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                style="@style/autoTradingEditTextRight"
                android:text="@string/buyPrice"/>
            <EditText
                android:id="@+id/buyPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:textAlignment="textEnd"
                style="@style/autoTradingEditTextLeft"
                android:maxLines="1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>